--- a/style/style.css
+++ b/style/style.css
@@ -9,6 +9,7 @@
 }
 html {
     height:100%;
+    scroll-behavior: smooth;
 }
 body{
     background-color: #280a43;
@@ -135,6 +136,7 @@ header{
 /*about me*/
 .about{
     justify-content: space-around;
+    margin-top: 50px;
 }
 .about img{
     border: 30px solid  #674a95;
@@ -175,9 +177,9 @@ header .overlay{
     z-index: 3;
     left: 0;
     top:0;
-    background-color: black;
+    background: rgb(2,0,36);background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(0,212,255,1) 0%, rgba(0,0,0,0.87718837535014) 0%);
     overflow: hidden;
-    transition: all 1.3s ease 0s;
+    transition: all 0.3s ease 0s;
 }
 header .overlay .overlay-content {
     display: flex;
@@ -217,6 +219,7 @@ header .overlay .close{
     
 }
 /*Resoponsive Querty*/
+
 @media(max-width: 1000px){
     .info-title,.about-info h2{
         font-size: 2em;
