--- a/style/style.css
+++ b/style/style.css
@@ -3,290 +3,233 @@
 
 /*configuraciones basicas para la pagina*/
 *{
-    box-sizing: border-box;
     margin: 0;
     padding: 0;
 }
-html {
-    height:100%;
-    scroll-behavior: smooth;
-}
 body{
-    background-color: #280a43;
-    min-width: 320px;    
+    font-family: "Nunito", sans-serif;
 }
-header{
-    height: 100vh;
-    width: auto;
-    font-family:  "Nunito Sans", sans-serif;
-}
-/*configuraciones logo navbar*/
-.brand img{
-    height: 70px;
-    width: auto;
-    cursor: pointer;
-    transition: 1.3s ease 0s;
-}
-/*configuraciones del navbar*/
-.navbar{
-    z-index: 2;
-    position: fixed;
-    top: 0;
-    width: 100%;
-    background-color: #fbb03b;
-    display: flex;
+.cards{
     align-items: center;
-    justify-content: space-between;
-    height: 85px;
-    padding: 5px 10%;
-}
-/*configuraciones botones navbar*/
-.menu{
+    background-color: #291340; 
+    background: rgb(65,41,90);background: linear-gradient(90deg, rgba(65,41,90,1) 0%, rgba(176,74,240,1) 50%, rgba(65,41,90,1) 100%);
     display: flex;
-}
-.menu li {
-    display: inline-block;
-    padding:0 20px;
-}
-.menu a{
-    background-color: #674a95;
-    border-radius: 5px;
-    padding:10px 20px;
-    font-size: 700;
-    color: #eceff1;
-}
-.active{
-    transition: transform 0.3s;
-}
-.active:hover{
-    transform: scale(1.1);
-}
-.menu a:hover{
-    background-color: #41295a;
-    color: #eceff1;
-    transform: scale(1.1);
-}
-.menu-open button{
-    background-color: #674a95;
-    border-radius: 5px;
-    padding:14px 20px;
-    font-size: 700;
-    color: #eceff1;
-    border: none;
-}
-/*Configuracion del inicio*/
-.floating-image {
-    filter: drop-shadow(0px 31px 50px #fbb03b);
-    display: inline-block;
-    animation: float 5s ease-in-out infinite;
-    object-fit: contain
-}
-.main,.about{
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    height: 100%;
-}
-.info-content,.about-info{
-    width: 40%;
+    flex-direction: column;
     height: auto;
+}
+.card-header{
+    width: 100%;
+}
+.card-main{
+    background-color: #291340; 
+    height: auto;
+    width: 70%;
+}
+section{
+    height: 100vh;
+}
+.nav-img{
+    display: flex;
+    height: 80px;
+    width: auto;
+}
+nav{
+    align-items: center;
+    background-color:  #fbb03b;
+    display: flex;
+    justify-content: space-around;
+}
+nav ul{
+    display: flex;
+}
+nav li{
+    list-style: none;
+}
+nav a{
+    background-color: #674a95;
+    border-radius: 5px;
+    color: #eceff1;
+    font-size: 700;
+    margin: 5px;
+    padding: 20px;
+    padding:10px 20px;
+    text-decoration: none;
+}
+.inicio,.sobremi{
+    align-items: center;
+    display: flex;
+    height: 100%;
+    justify-content: space-around;
+}
+.inicio-img,.sobremi-img{
+    background: rgb(65,41,90);background: linear-gradient(90deg, rgba(65,41,90,1) 0%, rgba(176,74,240,1) 50%, rgba(251,176,59,1) 100%);
+    border: 25px solid #674a95 ;
+    display: flex;
+    justify-content: center;
+}
+.sobremi-icons{
+    align-items: center;
+    display: flex;
+    height: 60px;
+    justify-content: space-around;
+    margin: 5px 0px;
+    width: auto;
+}
+section .sobremi-icons img{
+    width: 50px ;
+}
+.inicio-img{
+    width: 40%;
+}
+.sobremi-img{
+    width: 40%;
+}
+.inicio-content,.sobremi-content{
+    border-radius: 15px;
+    background-color: #41295a;
+    box-shadow: 0px 0px 20px 5px  #674a95;
+    color: #eceff1;
+    font-size: 20px;
+    height: auto;
+    padding: 30px;
+    text-align: center;
+    width: 40%;
+}
+.sobremi img{
+    height: auto;
+    width: 100%;
+}
+.inicio img{
+    height: auto;
+    width: 100;
+}
+
+button{
+    background-color:  #fbb03b;
+    border: none;
+    border-radius: 5px;
+    color:black;
+    font-size: 700;
+    margin-top: 10px;
+    padding:14px 20px;
+}
+
+.portafolio-content , .portafolio{
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    justify-content: center;
+    
+}
+.portafolio-title{
+    align-items: center;
     background-color: #41295a;
     border-radius: 15px;
-    padding: 20px;
     box-shadow: 0px 0px 20px 5px  #674a95;
-    font-size: 20px;
-  }
-  
-.info-title,.about-info h2{
-    margin: 10px;
     color: #eceff1;
+    display: flex;
+    font-size: 20px;
+    flex-direction: column;
+    height: 18%; 
+    justify-content: center;
+    margin: 0px 45px;
     text-align: center;
-    background-color: #674a95;
-    border: none;
-    padding: 20px 30px;
-    font-family: 'Berlin Sans FB', sans-serif;
-    font-size: 3em;
 }
-.letra1 {
+.portafolio-article{
+    align-content: end;
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    height: 80%;
+    justify-items: center;
+} 
+article{
+    border:5px solid #674a95;
+    background: rgb(65,41,90);background: linear-gradient(90deg, rgba(65,41,90,1) 0%, rgba(176,74,240,1) 50%, rgba(251,176,59,1) 100%);
+    color: #eceff1;
+    height: 210px;
+    margin: 15px;
+    text-align: center;
+    width: 300px;
+}
+article img{
+    height: 180px;
+    width: auto;
+}
+.letra-1{
     color: black;
     position: relative;
-    z-index: 1;
 }
-.letra2{
+.letra-2{
     color: #fbb03b;
     display: inline-block; 
     transform: rotate(-5deg);
 }
-
-.info-button{
-    margin-top: 20px;
-    padding: 15px 20px;
+.inicio-content h1,.sobremi-content h2{
     border: none;
-    border-radius: 5px;
-    background-color: #fbb03b;
-    color: black;
+    background-color: #674a95;
+    color: #eceff1;
+    font-family: 'Berlin Sans FB', sans-serif;
+    font-size: 3em;
+    margin: 10px 0px;
+    padding: 20px 30px;
+    text-align: center;
 }
-.info-content p ,
-.about-info p{
-    margin: 20px;
+.inicio-content p,.sobremi-content p,.portafolio-content p{
+    font-size: 15px;
 }
-.info-button{
-    margin: 20px;
-}  
-/*about me*/
-.about{
-    justify-content: space-around;
-    margin-top: 50px;
-}
-.about img{
-    border: 30px solid  #674a95;
-    width: 40%;
-    height: auto;
-    filter: drop-shadow(5px 31px 50px #fbb03b);
-    display: inline-block;
-    animation: float 5s ease-in-out infinite;
-    object-fit: contain
-}
-/*Nav Querty*/
-@media screen and (min-width: 900px){
-    .menu-open{
-        display: none;
-    }
-}
-@media screen and (max-width: 900px){
-    .menu{
-        display: none;
-    }
-    
-    .menu-open{
-        display: inherit;
-    }
-}
-header a{
-    text-decoration: none;
+.portafolio-content h2{
     border: none;
-    
+    background-color: #674a95;
+    color: #eceff1;
+    font-family: 'Berlin Sans FB', sans-serif;
+    font-size: 3em;
+    width: 95%;
 }
-header li{
-    list-style: none;
+.portafolio-content p{
+    width: 95%;
+    margin-top: 10px;
 }
-header .overlay{
-    height: 100%;
-    width: 0;
-    position: fixed;
-    z-index: 3;
-    left: 0;
-    top:0;
-    background: rgb(2,0,36);background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(0,212,255,1) 0%, rgba(0,0,0,0.87718837535014) 0%);
-    overflow: hidden;
-    transition: all 0.3s ease 0s;
-}
-header .overlay .overlay-content {
+.contacto-links{
     display: flex;
-    height: 100%;
-    flex-direction: column;
+    flex-direction:column;
+    justify-content:center;
     align-items: center;
-    justify-content: center;
+    padding:30px;
+    background-color: #fbb03b;
+    font-size: 1.5em;
+    color:#291340;
 }
-header .overlay a{
+.contacto-links h2{
+    background-color: #41295a;
+    width: 100%;
+    padding: 5px;
+    color: #eceff1;
+    border-radius: 5px;
+}
+.redes{
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+    padding: 5px;
+    background-color: #291340;
+    margin: 5px;
+    border-radius: 5px;
+}
+.redes a{
+    text-decoration: none;
+    color:#eceff1;
+}
+.redes li{
+    padding: 5px;
+}
+.web-autor{
+    display: flex;
+    justify-content: center;
     padding: 15px;
-    font-size: 36px;
-    display: block;
-    transition: all 0.3s ease 0s;
-    font-weight: 700;
+    background-color: #291340;
+    color: #fbb03b;
+}
+.web-autor a{
+    text-decoration: none;
     color: #eceff1;
 }
-header .overlay a:hover ,
-header .overlay a:focus{
-     color: #fbb03b;
-}
-header .overlay .close{
-    position: absolute;
-    top: 25px;
-    right: 45px;
-    font-size: 65px;
-}
-@media screen  and (max-height:450px){ 
-
-    header .overlay a{
-        font-size: 20px;
-    }
-    header .overlay .close{
-        font-size: 40px;
-        top: 15px;
-        right: 35px;
-    }
-    
-}
-/*Resoponsive Querty*/
-
-@media(max-width: 1000px){
-    .info-title,.about-info h2{
-        font-size: 2em;
-    }
-}
-@media(max-width: 900px){
-    .info-content,.about-info{
-        font-size: 2vw;
-    }
-    .floating-image,.about img{
-        height: auto;
-        width: 45%;
-    }
-}
-@media(max-width: 750px){
-    .info-content,.about-info{
-        font-size: 2vw;
-    }
-    .floating-image,.about img{
-        height: auto;
-        width: 45%;
-    }
-
-}
-@media(max-width: 620px){
-    header{
-        height: auto;
-    }
-    .main{
-        margin-top: 150px;
-        display: flex;
-        flex-direction: column;
-    }
-    .about{
-        display: flex;
-        flex-direction: column-reverse;
-    }
-   .info-content,.about-info{
-        height: auto;
-        width: 80%;
-    }
-    .floating-image,.about img{
-        height: auto;
-        width: 55%;
-        margin: 80px;
-    }
-    .info-title,.about-info h2{
-        font-size: 5vw;
-    }
-    .info-content,.about-info{
-        font-size: 4vw;
-    }
-    .about img{
-        border: 10px solid  #674a95;
-    }
-  }
-
-  /*floating image transition*/
-@keyframes float {
-0% {
-      transform: translateY(0); /* Posición inicial */
-}
-50% {
-      transform: translateY(-20px); /* Mueve hacia arriba */
-}
-100% {
-      transform: translateY(0); /* Regresa a la posición inicial */
-}
-}
-  
