--- a/style/style.css
+++ b/style/style.css
@@ -6,9 +6,6 @@
     margin: 0;
     padding: 0;
 }
-body{
-    font-family: "Nunito", sans-serif;
-}
 .cards{
     align-items: center;
     background-color: #291340; 
@@ -16,17 +13,18 @@ body{
     display: flex;
     flex-direction: column;
     height: auto;
+    font-family: "Nunito", sans-serif;
 }
 .card-header{
     width: 100%;
 }
 .card-main{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     background-color: #291340; 
     height: auto;
     width: 70%;
-}
-section{
-    height: 100vh;
 }
 .nav-img{
     display: flex;
@@ -55,181 +53,141 @@ nav a{
     padding:10px 20px;
     text-decoration: none;
 }
-.inicio,.sobremi{
-    align-items: center;
+section{
+    border: 1px solid white;
+    height: 100vh;
     display: flex;
+    justify-content: center;
+}
+.inicio,.sobremi{
+    border: 1px solid;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 90%;
+}
+.sobremi-icons {
+    margin: 10px;
+    padding: 20px;
+    height: 50px;
+    width: auto;
+    border: 1px solid ;
+}
+.sobremi-icons img{
+    height: 50px;
+    margin: 0px 25px;
+    width: auto;
+    box-shadow: 0 8px 16px rgba(149, 56, 255, 0.5);
+    transition: box-shadow 0.3s ease, transform 0.3s ease;
+}
+.sobremi-icons img:hover{
+    transform: scale(1.1);
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.5);
+}
+.portafolio article img{
+    height: 90px;
+    width: auto;
+}
+.box-1{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid white;
+    width: 50%;
     height: 100%;
-    justify-content: space-around;
+    flex-wrap: wrap;
+}
+.box-2{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    border: 1px solid white;
+    width: 50%;
+    height: 100%;
+}
+.sobremi-content ,.inicio-content {
+    border: 1px solid yellow;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    flex-direction: column;
+    width: 90%;
+    height: 50%;
 }
 .inicio-img,.sobremi-img{
-    background: rgb(65,41,90);background: linear-gradient(90deg, rgba(65,41,90,1) 0%, rgba(176,74,240,1) 50%, rgba(251,176,59,1) 100%);
-    border: 25px solid #674a95 ;
+    background: rgb(251,176,59);background: radial-gradient(circle, rgb(253, 173, 0) 0%, rgb(160, 39, 230) 100%);
     display: flex;
-    justify-content: center;
-}
-.sobremi-icons{
     align-items: center;
-    display: flex;
-    height: 60px;
-    justify-content: space-around;
-    margin: 5px 0px;
-    width: auto;
+    justify-content: center;
+    width: 80%;
+    height: 50%;
+    border: 30px solid #4f327e;
+    overflow: hidden;
 }
-section .sobremi-icons img{
-    width: 50px ;
-}
-.inicio-img{
-    width: 40%;
-}
-.sobremi-img{
-    width: 40%;
-}
-.inicio-content,.sobremi-content{
-    border-radius: 15px;
-    background-color: #41295a;
-    box-shadow: 0px 0px 20px 5px  #674a95;
-    color: #eceff1;
-    font-size: 20px;
-    height: auto;
-    padding: 30px;
-    text-align: center;
-    width: 40%;
-}
-.sobremi img{
-    height: auto;
+.inicio-img img,.sobremi-img img{
     width: 100%;
+    height:auto;
+    transition: transform 0.3s ease;
 }
-.inicio img{
-    height: auto;
-    width: 100;
+.inicio-img:hover,.sobremi-img:hover{
+    border: 30px solid #8546b9;
 }
-
-button{
-    background-color:  #fbb03b;
-    border: none;
+.inicio-img img:hover,.sobremi-img img:hover{
+    transform: scale(1.1);
+}
+.inicio-img article,.sobremi-img article{
+    width: 100%;
+    height:100%;
+    display:flex ;
+    align-items: center;
+}
+.sobremi-content h2,.inicio-content h1{
+    text-align: center;
+    padding: 20px;
+    background-color: #674a95;
+    width: 90%;
     border-radius: 5px;
-    color:black;
-    font-size: 700;
-    margin-top: 10px;
-    padding:14px 20px;
 }
-
-.portafolio-content , .portafolio{
+.sobremi-content p,.inicio-content p{
+    padding: 20px;
+    width: 90%;
+    color: #fff;
+}
+.style-content{
     display: flex;
     flex-direction: column;
-    height: 100%;
-    justify-content: center;
-    
-}
-.portafolio-title{
     align-items: center;
-    background-color: #41295a;
-    border-radius: 15px;
-    box-shadow: 0px 0px 20px 5px  #674a95;
-    color: #eceff1;
-    display: flex;
-    font-size: 20px;
-    flex-direction: column;
-    height: 18%; 
     justify-content: center;
-    margin: 0px 45px;
-    text-align: center;
-}
-.portafolio-article{
-    align-content: end;
-    display: grid;
-    grid-template-columns: repeat(2,1fr);
-    height: 80%;
-    justify-items: center;
-} 
-article{
-    border:5px solid #674a95;
-    background: rgb(65,41,90);background: linear-gradient(90deg, rgba(65,41,90,1) 0%, rgba(176,74,240,1) 50%, rgba(251,176,59,1) 100%);
-    color: #eceff1;
-    height: 210px;
-    margin: 15px;
-    text-align: center;
-    width: 300px;
-}
-article img{
-    height: 180px;
-    width: auto;
-}
-.letra-1{
-    color: black;
-    position: relative;
-}
-.letra-2{
-    color: #fbb03b;
-    display: inline-block; 
-    transform: rotate(-5deg);
-}
-.inicio-content h1,.sobremi-content h2{
-    border: none;
-    background-color: #674a95;
-    color: #eceff1;
-    font-family: 'Berlin Sans FB', sans-serif;
-    font-size: 3em;
-    margin: 10px 0px;
-    padding: 20px 30px;
-    text-align: center;
-}
-.inicio-content p,.sobremi-content p,.portafolio-content p{
-    font-size: 15px;
-}
-.portafolio-content h2{
-    border: none;
-    background-color: #674a95;
-    color: #eceff1;
-    font-family: 'Berlin Sans FB', sans-serif;
-    font-size: 3em;
-    width: 95%;
-}
-.portafolio-content p{
-    width: 95%;
-    margin-top: 10px;
-}
-.contacto-links{
-    display: flex;
-    flex-direction:column;
-    justify-content:center;
-    align-items: center;
-    padding:30px;
-    background-color: #fbb03b;
-    font-size: 1.5em;
-    color:#291340;
-}
-.contacto-links h2{
-    background-color: #41295a;
-    width: 100%;
-    padding: 5px;
-    color: #eceff1;
+    background-color: #4f327e;
+    padding: 20px;
     border-radius: 5px;
 }
-.redes{
-    display: flex;
-    justify-content: space-around;
-    width: 100%;
-    padding: 5px;
-    background-color: #291340;
-    margin: 5px;
-    border-radius: 5px;
+@media (max-width:1000px){
+    .inicio,.sobremi{
+        flex-direction: column;
+    }
+    .card-main{
+        width: 100%;
+    }
+    .box-1,.box-2{
+        width: 100%;
+    }
+    .inicio-img,.sobremi-img{
+        width: 50%;
+        height: 70%;
+    }
 }
-.redes a{
-    text-decoration: none;
-    color:#eceff1;
-}
-.redes li{
-    padding: 5px;
-}
-.web-autor{
-    display: flex;
-    justify-content: center;
-    padding: 15px;
-    background-color: #291340;
-    color: #fbb03b;
-}
-.web-autor a{
-    text-decoration: none;
-    color: #eceff1;
+@media (max-width:650px){
+    nav a{
+        display: none;
+    }
+    .inicio-img,.sobremi-img{
+        width: 60%;
+        height: 70%;
+    }
+    .sobremi-icons img{
+        margin: 0px 5px;
+    }
 }
